modofication nav bar

--- a/template/index.html
+++ b/template/index.html
@@ -10,12 +10,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#system">home</a></li>
-            <li><a href="#cpu">home</a></li>
-            <li><a href="#memory">home</a></li>
-            <li><a href="#network">home</a></li>
-            <li><a href="#processes">home</a></li>
-            <li><a href="#files">home</a></li>
+            <li><a href="#system">System</a></li>
+            <li><a href="#cpu">CPU</a></li>
+            <li><a href="#memory">Memory</a></li>
+            <li><a href="#network">Network</a></li>
+            <li><a href="#processes">Processes</a></li>
+            <li><a href="#files">Files</a></li>
         </ul>
     </nav>
 
