--- a/templates/index.html
+++ b/templates/index.html
@@ -21,36 +21,36 @@
 
     <header>
         <h1>Machine dashboard</h1>
-        <p>Generated at {{ generation_time }}</p>
+        <p><strong>Generated at:</strong> {{ generation_time }}</p>
     </header>
 
     <main>
         <section class="system" id="system">
             <h2>System</h2>
-            <p>Hostname: {{ SYS_HOSTNAME }}</p>
-            <p>Os: {{ SYS_OS_NAME }}</p>
-            <p>Uptime: {{ SYS_UPTIME }}</p>
-            <p>Connected users: {{ SYS_CONNECTED_USERS }}</p>
+            <p><strong>Hostname:</strong> {{ SYS_HOSTNAME }}</p>
+            <p><strong>OS:</strong> {{ SYS_OS_NAME }}</p>
+            <p><strong>Uptime:</strong> {{ SYS_UPTIME }}</p>
+            <p><strong>Connected users:</strong> {{ SYS_CONNECTED_USERS }}</p>
         </section>
 
         <section class="cpu" id="cpu">
             <h2>CPU</h2>
-            <p>Cores: {{ CPU_CORE_COUNT }}</p>
-            <p>Current frequency: {{ CPU_CURRENT_FREQ }} MHZ</p>
-            <p>Usage: {{ CPU_PERCENTAGE }} %</p>
+            <p><strong>Cores:</strong> {{ CPU_CORE_COUNT }}</p>
+            <p><strong>Current frequency:</strong> {{ CPU_CURRENT_FREQ }} MHZ</p>
+            <p><strong>Usage:</strong> {{ CPU_PERCENTAGE }} %</p>
         </section>
 
         <section class="memory" id="memory">
             <h2>RAM</h2>
-            <p>RAM total: {{ MEMORY_TOTAL_GB }} GB</p>
-            <p>RAM used: {{ MEMORY_USED_GB }} GB</p>
-            <p>Usage: {{ MEMORY_USAGE_PERCENT }} %</p>
+            <p><strong>RAM total:</strong> {{ MEMORY_TOTAL_GB }} GB</p>
+            <p><strong>RAM used:</strong> {{ MEMORY_USED_GB }} GB</p>
+            <p><strong>Usage:</strong> {{ MEMORY_USAGE_PERCENT }} %</p>
         </section>
 
         <section class="network" id="network">
             <h2>Network</h2>
-            <p>Network type: NAT</p>
-            <p>Main IP address: {{ NETWORK_IP }}</p>
+            <p><strong>Network type:</strong> NAT</p>
+            <p><strong>Main IP address:</strong> {{ NETWORK_IP }}</p>
         </section>
 
         <section class="processes" id="processes">
@@ -72,7 +72,7 @@
 
         <section class="files" id="files">
             <h2>Files</h2>
-            <p>Analyzed folder: {{ FILES_DIRC }}</p>
+            <p><strong>Analyzed folder:</strong> {{ FILES_DIRC }}</p>
             <ul>
                 <li>Total files: {{ FILES_TOTAL_COUNT }}</li>
                 <li>Text files: {{ TEXT_FILES_COUNT }}</li>
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-        <p>Project released by AAD-Group using flask on {{system_hostname}}</p>
+        <p><strong>Project released by AAD-Group using flask on {{system_hostname}}</strong></p>
     </footer>
 
 </body>
