--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
     </main>
 
     <footer>
-        <p><strong>Project released by AAD-Group using flask on {{system_hostname}}</strong></p>
+        <p><strong>Project released by AAD-Group using flask on {{SYS_HOSTNAME}}</strong></p>
     </footer>
 
 </body>
